[gd_scene load_steps=11 format=3 uid="uid://dhisb5g4kf3le"]

[ext_resource type="Script" path="res://scenes/projectiles/stone_projectile.gd" id="1_7e6ep"]
[ext_resource type="PhysicsMaterial" uid="uid://cgwq52o87akpq" path="res://resources/materials/drop_physics_material.tres" id="1_futb6"]
[ext_resource type="SphereMesh" uid="uid://004wttwvhpwe" path="res://assets/3d/my/stone_mesh.tres" id="2_mv7th"]

[sub_resource type="SphereShape3D" id="SphereShape3D_gelvw"]
resource_local_to_scene = true
radius = 0.11

[sub_resource type="SphereShape3D" id="SphereShape3D_bblb0"]
radius = 0.15

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jfoij"]
gravity = Vector3(0, -1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4frfk"]
shading_mode = 0
albedo_color = Color(2, 2, 2, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_p77uj"]
lightmap_size_hint = Vector2i(2, 2)
material = SubResource("StandardMaterial3D_4frfk")
size = Vector2(0.03, 0.03)
orientation = 2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iin2b"]
radial_velocity_min = -2.23517e-05
radial_velocity_max = 2.99998
gravity = Vector3(0, 0.5, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_tnvrm"]
material = SubResource("StandardMaterial3D_4frfk")
size = Vector2(0.03, 0.03)

[node name="StoneProjectile" type="RigidBody3D"]
collision_layer = 4
collision_mask = 5123
mass = 0.5
physics_material_override = ExtResource("1_futb6")
gravity_scale = 0.6
continuous_cd = true
script = ExtResource("1_7e6ep")

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
light_color = Color(1, 1, 0.654902, 1)
omni_range = 1.0
omni_shadow_mode = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_gelvw")

[node name="Stone" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_mv7th")

[node name="Area3D" type="Area3D" parent="Stone"]
collision_layer = 4
collision_mask = 5120

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stone/Area3D"]
shape = SubResource("SphereShape3D_bblb0")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ProjectileParticles" type="GPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 10
transform_align = 3
process_material = SubResource("ParticleProcessMaterial_jfoij")
draw_pass_1 = SubResource("PlaneMesh_p77uj")

[node name="CollisionParticles" type="GPUParticles3D" parent="."]
transparency = 0.5
cast_shadow = 0
emitting = false
amount = 20
one_shot = true
explosiveness = 0.77
process_material = SubResource("ParticleProcessMaterial_iin2b")
draw_pass_1 = SubResource("PlaneMesh_tnvrm")

[connection signal="body_entered" from="Stone/Area3D" to="." method="_on_static_body_3d_body_entered"]
